# FdGraph

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  controller.cpp
.github/workflows/: full_sources.yml  linux.yml  osx.yml  win.yml
client/: CMakeLists.txt  app.cpp
client/backend/: backend.cpp
client/core/: clientController.cpp  clientController.h  controller.cpp  controller.h
client/frontend/: frontend.cpp
cmake/Maintained/: ezlibs.cmake  imguipack.cmake
cmake/NotMaintained/: glad.cmake  glfw.cmake
common/: CMakeLists.txt
common/headers/: customImWidgetsConfig.h  datasDef.h
common/res/: fontIcons.cpp  fontIcons.h
common/res/fonts/: font.ifs
server/: CMakeLists.txt
server/backend/: backend.cpp  backend.h
server/core/: controller.cpp  controller.h  serverController.cpp  serverController.h
server/frontend/: frontend.cpp
src/: app.cpp
src/backend/: backend.cpp
src/core/: controller.cpp  controller.h  serverController.cpp  serverController.h
src/frontend/: frontend.cpp  frontend.h  imguiThemes.cpp
src/headers/: FdGraphBuild.h  ForceDirectedGraphBuild.h  WookieLinksBuild.h
src/res/: fontIcons.cpp  fontIcons.h
src/res/fonts/: font.ifs
tools/: config.xml
